--- a/about-us.html
+++ b/about-us.html
@@ -18,16 +18,16 @@
 </head>
 
 <body>
-    <!--web banner-->
+    <!--banner-->
     <div class="banner">
-        <img src="images/nav-banner.png" style="width: 100%;">
         <div class="banner">
-            <div class="nav-banner">
-                <div class="centered">
-                    <a href="index.html"><img src="images/logo.png"></a>
-                </div>
-            </div> 
+            <img src="images/nav-banner.png" style="width: 100%; vertical-align: top;">
         </div>
+        <div class="nav-banner">
+            <div class="centered">
+                <a href="index.html"><img src="images/logo.png"></a>
+            </div>
+        </div> 
     </div>
     <!--web nav bar-->
     <div class="web-nav-bar">
@@ -35,8 +35,17 @@
             <div class="row">
                 <div class="nav col-md-10">
                     <a class="nav-links" href="about-us.html">About Us</a>
-                    <a class="nav-links" href="shop.html">Shop</a>
-                    <a class="nav-links" href="locate-us.html">Promotions & Events</a>
+                    <div class="drop-down">
+                        <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Shop
+                        </button></a>
+                        <div class="dropdown-content">
+                            <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
+                            <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
+                            <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                        </div>
+                    </div>
+                    <a class="nav-links" href="locate-us.html">Find Us</a>
                     <a class="nav-links" href="contact-us.html">Contact Us</a>
                     <a class="nav-links" href="faqs.html">FAQs</a>
                     <a class="nav-links" href="reviews.html">Reviews</a>  
@@ -48,79 +57,64 @@
             </div>
         </div>
         <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
-    </div>
-    <!--mobile banner-->
-    <div class="banner">
-        <img src="images/nav-banner.png" style="width: 100%;">
-        <div class="banner">
-            <div class="nav-banner">
-                <div class="centered">
-                    <a href="index.html"><img src="images/logo.png"></a>
-                </div>
-            </div> 
-        </div>
-    </div>
+    </div> 
     <!--mobile nav bar-->
     <div class="mobile-nav-bar">
-        <div class="row-nav-bar">
-            <div class="row">
-                <div class="nav col-md-10">
-                    <a class="nav-links" href="about-us.html">About Us</a>
-                    <div class="drop-down">
-                        <button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Shop
-                        </button>
-                        <a class="dropdown-item nav-link" href="#">All Products</a>
-                        <a class="dropdown-item nav-link" href="#">On Sale</a>
-                        <a class="dropdown-item nav-link" href="#"></a>
-                    </div>
-                    <a class="nav-links" href="locate-us.html">Promotions & Events</a>
-                    <a class="nav-links" href="contact-us.html">Contact Us</a>
-                    <a class="nav-links" href="faqs.html">FAQs</a>
-                    <a class="nav-links" href="reviews.html">Reviews</a>  
-                </div>
-                <div class="col-md-1 offset-md-1 nav-icon">
-                    <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
-                    <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+        <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
+        <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
+        <div class="collapse" id="dropdown-content">
+            <div class="card card-body">
+                <div class="accordion-body">
+                    <a class="nav-links" href="about-us.html">About Us</a> <br>
+                    <a class="nav-links" href="shop.html">Shop</a><br>
+                    <a class="nav-links" href="Find Us">Find Us</a><br>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a><br>
+                    <a class="nav-links" href="faqs.html">FAQs</a><br>
+                    <a class="nav-links" href="reviews.html">Reviews</a>
                 </div>
             </div>
-        </div>
+        </div> 
         <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
     </div>
     <!--about us-->
-    <div class="row-10">
-        <div class="about-us">
+    <div class="about-us">
+        <img class="web-img" src="images/singapore-best-flavoured-cashews.png">
+        <img class="mobile-img" src="images/singapore-best-flavoured-cashews.png">
+        <div class="centered-banner-text">
             <div class="heading">
                 <h1>About Us</h1>
+                <h4>Locally grown cashews flavoured to delight every Singaporean palate. </h4> <br>
+                <h6>
+                    Derived from the malay word ‘Kacang’ <br><br>
+                    Pronunciation: /kat͡ʃaŋ/ <br>
+                    kah · chang <br><br>
+                    Meaning: Nuts 
+                    
+                </h6>
             </div>
-            <div>
-                <p3>We will be there to <b><i>Cashew</i></b> for every <b><i>ocCASHEWn</i></b> </p3> <br><br>
-                <p4>
-                    KACAANG was derived from the Malay word "Kacang". <br><br> 
-                    Born from passion, we set out to revolutionize the way you snack. We want to be the nutty sidekick in your daily adventures, whether you're a parent on a mission to snack smarter, an HR pro curating the perfect office pantry, or a discerning snacker with an eye on well-being. <br><br>
-                    Our cashews taste so good it makes your eyes go A.A !
-                </p4>
-            </div>   
         </div>
     </div>
     <!--values-->
-    <div class="row-10" style="padding-bottom: 40px;">
-        <div class="values row">
+    <div class="values">
+        <div class="row">
             <div class="col-md-2 col-6">
                 <i class="icon fa-regular fa-thumbs-up"></i><br>
-                <p4>Quality</p4>
+                <h6>Quality</h6>
             </div>
             <div class="col-md-2 col-6">
-                <i class="icon fa-solid fa-award"></i><br>
-                <p4>Excellence</p4>
+                <img src="images/shop-local.png"><br>
+                <h6>Local Pride</h6>
             </div>
             <div class="col-md-2 col-6">
                 <i class="icon fa-solid fa-recycle"></i></i><br>
-                <p4>Sustainable</p4>
+                <h6>Sustainable</h6>
             </div>
             <div class="col-md-2 col-6">
                 <i class="icon fa-solid fa-leaf"></i><br>
-                <p4>Fresh</p4>
+                <h6>Fresh</h6>
             </div>
         </div>
     </div>
@@ -128,94 +122,14 @@
     <div class="mission-vision">
         <div class="row">
             <div class="mission col-md-6">
-                <div class="row-mission-vision">
-                    <p2>Mission</p2> <br>
-                    <img src="images/target.png"> <br>
-                    <p6>At Kacaang, we're on a mission to prove that snacking can be a delicious adventure.</p6>
-                </div>
+                <h3>Mission</h3>
+                <img src="images/target.png">
+                <h6>Crunching our way to a tastier, happier world, one cashew at a time.</h6>
             </div>
             <div class="vision col-md-6">
-                <div class="row-mission-vision">
-                    <p5>Vision</p5> <br>
-                    <img src="images/vision.png"> <br>
-                    <p4>Nuts that unite and delight. <br>
-                        Crunching our way to a tastier, happier world, one cashew at a time.</p4>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--about us-->
-    <div class="row-10">
-        <div class="about-us">
-            <div class="heading">
-                <h1>About Us</h1>
-            </div>
-            <div>
-                <p3>We will be there to <b><i>Cashew</i></b> for every <b><i>ocCASHEWn</i></b> </p3> <br><br>
-                <p4>
-                    KACAANG was derived from the Malay word "Kacang". <br><br> 
-                    Born from passion, we set out to revolutionize the way you snack. We want to be the nutty sidekick in your daily adventures, whether you're a parent on a mission to snack smarter, an HR pro curating the perfect office pantry, or a discerning snacker with an eye on well-being. <br><br>
-                    Our cashews taste so good it makes your eyes go A.A !
-                </p4>
-            </div>   
-        </div>
-    </div>
-    <!--values-->
-    <div class="row-10" style="padding-bottom: 40px;">
-        <div class="values row">
-            <div class="col-md-2 col-6">
-                <i class="icon fa-regular fa-thumbs-up"></i><br>
-                <p4>Quality</p4>
-            </div>
-            <div class="col-md-2 col-6">
-                <i class="icon fa-solid fa-award"></i><br>
-                <p4>Excellence</p4>
-            </div>
-            <div class="col-md-2 col-6">
-                <i class="icon fa-solid fa-recycle"></i></i><br>
-                <p4>Sustainable</p4>
-            </div>
-            <div class="col-md-2 col-6">
-                <i class="icon fa-solid fa-leaf"></i><br>
-                <p4>Fresh</p4>
-            </div>
-        </div>
-    </div>
-    <!--mission and vision-->
-    <div class="mission-vision">
-        <div class="row">
-            <div class="mission col-md-6">
-                <div class="row-mission-vision">
-                    <p2>Mission</p2> <br>
-                    <img src="images/target.png"> <br>
-                    <p6>At Kacaang, we're on a mission to prove that snacking can be a delicious adventure.</p6>
-                </div>
-            </div>
-            <div class="vision col-md-6">
-                <div class="row-mission-vision">
-                    <p5>Vision</p5> <br>
-                    <img src="images/vision.png"> <br>
-                    <p4>Nuts that unite and delight. <br>
-                        Crunching our way to a tastier, happier world, one cashew at a time.</p4>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    <!--Kacaang's Farm-->
-    <div class="farm">
-        <div class="row-10">
-            <div class="heading">
-                <p5>Kacaang's Farm</p5>
-            </div>
-            <div class="row" style="padding: 0 65px 0 65px;">
-                <iframe width=80% height=417px src="https://www.youtube.com/embed/36Vn7LJJt_I">
-                </iframe>
-                <br>    
-                <p4 style="padding-top: 30px">Our cashew farm is an idyllic tropical oasis where our premium cashews flourish under the care of skilled hands, blending nature's bounty with human expertise to produce the finest, creamy cashews.</p4>
-            </div>
-            <div class="farm-button">
-                <a href="farm.html" class="button">Learn More</a>
+                <h3>Vision</h3>
+                <img src="images/vision.png">
+                <h6>Nuts that unite people together and ignite delightful memories.</h6>
             </div>
         </div>
     </div>
@@ -223,28 +137,28 @@
     <div class="row-10">
         <div class="our-team">
             <div class="heading">
-                <p2>Our Team</p2> 
+                <h3>Our Team</h3> 
             </div>
-            <div class="row" style="text-align: center;">
+            <div class="row">
                 <div class="col-md-3 col-6">
                     <img src="images/cashew-farmer.png" alt="">
-                    <p3><b>LotteChia Chia</b></p3> <br>
-                    <p4>CEO</p4>
+                    <h5><b>LotteChia Chia</b></h5>
+                    <h6>CEO</h6>
                 </div>
                 <div class="col-md-3 col-6">
                     <img src="images/cashew-farmer.png" alt="">
-                    <p3><b>Lica Kaye</b></p3> <br>
-                    <p4>CFO</p4>
+                    <h5><b>Lica Kaye</b></h5>
+                    <h6>CFO</h6>
                 </div>
                 <div class="col-md-3 col-6">
                     <img src="images/cashew-farmer.png" alt="">
-                    <p3><b>Wen Yu Ng</b></p3> <br>
-                    <p4>CTO</p4>
+                    <h5><b>Wen Yu Ng</b></h5>
+                    <h6>CTO</h6>
                 </div>
                 <div class="col-md-3 col-6">
                     <img src="images/cashew-farmer.png" alt="">
-                    <p3><b>Qi Qi Tan</b></p3> <br>
-                    <p4>Flavour Master</p4>
+                    <h5><b>Qi Qi Tan</b></h5>
+                    <h6>Flavour Master</h6>
                 </div>
             </div>
         </div>
@@ -254,8 +168,8 @@
         <div class="row-subscription">
             <div class="row">
                 <div class="col-md-5" style="padding-top: 55px">
-                    <p5>Got the case of the munchies?</p5> <br><br>
-                    <p5>Kacaang's &nbsp;</p5>
+                    <h7>Got the case of the munchies?</h7> <br><br>
+                    <h7>Kacaang's &nbsp;</h7>
                     <p6 style="color: #C33527; font-family: 'Titan One', sans-serif; font-size: 38px;">CASHEW</p6>
                     <div class="subscribe-icons">
                         <a href="#"><i class="subscribe-icons fa-brands fa-x-twitter"></i></a>
@@ -279,8 +193,8 @@
         <div class="row-subscription">
             <div class="row">
                 <div class="col-md-5" style="padding-top: 55px">
-                    <p5>Got the case of the munchies?</p5> <br><br>
-                    <p5>Kacaang's &nbsp;</p5>
+                    <h7>Got the case of the munchies?</h7> <br><br>
+                    <h7>Kacaang's &nbsp;</h7>
                     <p6 style="color: #C33527; font-family: 'Titan One', sans-serif; font-size: 38px;">CASHEW</p6>
                     <div class="subscribe-icons">
                         <a href="#"><i class="subscribe-icons fa-brands fa-x-twitter"></i></a>
@@ -304,7 +218,7 @@
         <div class="row-footer">
             <div class="row">
                 <div class="col-md-2">
-                    <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+                    <a href="index.html"><img class="kacaang-logo" src="images/logo.png"></a>
                 </div>
                 <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
@@ -327,7 +241,7 @@
                 </div>
                 <div class="col-md-3">
                     <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
-                    <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
+                    <a class="footer-link" href="#">TERMS & CONDITIONS</a> <br>
                 </div>
             </div>
             <div class="copyright">
@@ -358,12 +272,8 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
-                <p style="font-family: 'Comfortaa', sans-serif;
-                color: #EDA23F;
-                font-size: 14px;
-                font-weight: bold;">|</p>
-                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
                 <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
