--- a/corporate.html
+++ b/corporate.html
@@ -17,6 +17,67 @@
     <link rel="stylesheet" href="css/corporate.css">
 </head>
 <body>
+    <!--banner-->
+    <div class="banner">
+        <div class="banner">
+            <img src="images/nav-banner.png" style="width: 100%; vertical-align: top;">
+        </div>
+        <div class="nav-banner">
+            <div class="centered">
+                <a href="index.html"><img src="images/logo.png"></a>
+            </div>
+        </div> 
+    </div>
+    <!--web nav bar-->
+    <div class="web-nav-bar">
+        <div class="row-nav-bar">
+            <div class="row">
+                <div class="nav col-md-10">
+                    <a class="nav-links" href="about-us.html">About Us</a>
+                    <div class="drop-down">
+                        <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Shop
+                        </button></a>
+                        <div class="dropdown-content">
+                            <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
+                            <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
+                            <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                        </div>
+                    </div>
+                    <a class="nav-links" href="locate-us.html">Find Us</a>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a>
+                    <a class="nav-links" href="faqs.html">FAQs</a>
+                    <a class="nav-links" href="reviews.html">Reviews</a>  
+                </div>
+                <div class="col-md-1 offset-md-1 nav-icon">
+                    <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
+                    <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+                </div>
+            </div>
+        </div>
+        <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+    </div> 
+    <!--mobile nav bar-->
+    <div class="mobile-nav-bar">
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+        <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
+        <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
+        <div class="collapse" id="dropdown-content">
+            <div class="card card-body">
+                <div class="accordion-body">
+                    <a class="nav-links" href="about-us.html">About Us</a> <br>
+                    <a class="nav-links" href="shop.html">Shop</a><br>
+                    <a class="nav-links" href="Find Us">Find Us</a><br>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a><br>
+                    <a class="nav-links" href="faqs.html">FAQs</a><br>
+                    <a class="nav-links" href="reviews.html">Reviews</a>
+                </div>
+            </div>
+        </div> 
+        <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+    </div>
     <!--corprate header-->
     <div class="row-10">
         <div class="corporate">
@@ -161,12 +222,8 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
-                <!-- <p style="font-family: 'Comfortaa', sans-serif;
-                color: #EDA23F;
-                font-size: 14px;
-                font-weight: bold;">|</p> -->
-                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
                 <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
