--- a/farm.html
+++ b/farm.html
@@ -16,63 +16,170 @@
     <link rel="stylesheet" href="css/farm.css">
 </head>
 <body>
+     <!--banner-->
+     <div class="banner">
+        <div class="banner">
+            <img src="images/nav-banner.png" style="width: 100%; vertical-align: top;">
+        </div>
+        <div class="nav-banner">
+            <div class="centered">
+                <a href="index.html"><img src="images/logo.png"></a>
+            </div>
+        </div> 
+    </div>
+    <!--web nav bar-->
+    <div class="web-nav-bar">
+        <div class="row-nav-bar">
+            <div class="row">
+                <div class="nav col-md-10">
+                    <a class="nav-links" href="about-us.html">About Us</a>
+                    <div class="drop-down">
+                        <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Shop
+                        </button></a>
+                        <div class="dropdown-content">
+                            <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
+                            <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
+                            <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                        </div>
+                    </div>
+                    <a class="nav-links" href="locate-us.html">Find Us</a>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a>
+                    <a class="nav-links" href="faqs.html">FAQs</a>
+                    <a class="nav-links" href="reviews.html">Reviews</a>  
+                </div>
+                <div class="col-md-1 offset-md-1 nav-icon">
+                    <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
+                    <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+                </div>
+            </div>
+        </div>
+        <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+    </div> 
+    <!--mobile nav bar-->
+    <div class="mobile-nav-bar">
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+        <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
+        <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
+        <div class="collapse" id="dropdown-content">
+            <div class="card card-body">
+                <div class="accordion-body">
+                    <a class="nav-links" href="about-us.html">About Us</a> <br>
+                    <a class="nav-links" href="shop.html">Shop</a><br>
+                    <a class="nav-links" href="Find Us">Find Us</a><br>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a><br>
+                    <a class="nav-links" href="faqs.html">FAQs</a><br>
+                    <a class="nav-links" href="reviews.html">Reviews</a>
+                </div>
+            </div>
+        </div> 
+        <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+    </div>
     <!--header-->
     <div class="our-farm">
-        <div class="row-10">
-            <p1>Our Farm</p1> <br>
-            <p2 style="text-align: center;"><b>Sign up for our exciting Farm Tour for a memorable farm-to-table experience</b></p2>
+        <img class="web-img" src="images/farm-banner.png">
+        <img class="mobile-img" src="images/farm-banner.png">
+        <div class="centered-banner-text">
+            <div class="heading">
+                <h1>Our Farm</h1>
+            </div>
+            <h6><b>Join our exclusive farm tour for a memorable farm-to-table experience. Immerse yourself in the freshness and quality that define Kacaang. <br><br>
+
+                Limited slots available per week —  don’t miss your chance!</b></h6>
             <div class="sign-up">
-                <a href="#farm-tour" class="button">Sign Up Now</a>
+                <a href="#farm-tour">Sign Up Now</a>
             </div>
         </div>
     </div>
     <!--Achieving the perfect cashews-->
     <div class="processes">
+        <div class="heading">
+            <h3>How We Achieve the Perfect Cashews</h3>
+        </div>
+        <div class="row-10">
+            <div class="row justify-content-md-center">
+                <div class="content col-md-8">
+                    <div class="content-right">
+                        <h3>Step 1</h3>
+                        <h6>Hand pick the best quality cashews from our farm.</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-md-8">
+                    <div class="content-left">
+                        <h3>Step 2</h3>
+                        <h6>Dry cashews in the sunlight for a few days before roasting.</h6>
+                        <div class="illustration">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-md-8">
+                    <div class="content-right">
+                        <h3>Step 3</h3>
+                        <h6>Remove the outer and inner shell by cutting and peeling.</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-md-8">
+                    <div class="content-left">
+                        <h3>Step 4</h3>
+                        <h6>Cashews are tossed and coated with our homemade flavourings.</h6>
+                    </div>
+                </div>
+            </div>
+        <img class="nuts" src="images/nuts.png">
+        </div>
+    </div>
+    <!-- <div class="processes">
         <div class="row-10">
             <div class="heading">
-                <p5>How we achieve the Perfect Cashews</p5> <br>
+                <h3>How we achieve the Perfect Cashews</h3> <br>
             </div>
-            <img class="nuts" src="images/nuts.png">
+            <img class="nuts" src="images/nuts.png"> -->
             <!-- <div class="line"></div> -->
-            <div class="row">
-                <div class="info col-md-6 offset-md-5">
-                    <p3>Step 1</p3> <br>
-                    <p6>Hand pick the best quality cashews from our farm.</p6>
-                    <div class="illustration">
-                        <img class="info-images" src="images/raw-cashews.png"> 
-                    </div> 
+            <!-- <div class="row">
+                <div class="info col-md-6 offset-md-5 col-12">
+                    <h3>Step 1</h3> <br>
+                    <h6>Hand pick the best quality cashews from our farm.</h6>
                 </div>
             </div>
             <div class="row">
-                <div class="info col-md-6 offset-md-3">
-                    <p3>Step 2</p3> <br>
-                    <p6>Dry cashews in the sunlight for a few days before roasting.</p6>
+                <div class="info col-md-6 offset-md-3 col-12">
+                    <h3>Step 2</h3> <br>
+                    <h6>Dry cashews in the sunlight for a few days before roasting.</h6> -->
                     <!-- <img class="info-images" src="images/raw-cashews.png"> -->   
-                </div>
+                <!-- </div>
             </div>
             <div class="row">
-                <div class="info col-md-6 offset-md-5">
-                    <p3>Step 3</p3> <br>
-                    <p6>Remove the outer and inner shell by cutting and peeling.</p6>
+                <div class="info col-md-6 offset-md-5 col-12">
+                    <h3>Step 3</h3> <br>
+                    <h6>Remove the outer and inner shell by cutting and peeling.</h6> -->
                     <!-- <img class="info-images" src="images/raw-cashews.png"> -->   
-                </div>
+                <!-- </div>
             </div>
             <div class="row">
-                <div class="info col-md-6 offset-md-3">
-                    <p3>Step 4</p3> <br>
-                    <p6>Cashews are tossed and coated with our homemade flavourings.</p6>
+                <div class="info col-md-6 offset-md-3 col-12">
+                    <h3>Step 4</h3> <br>
+                    <h6>Cashews are tossed and coated with our homemade flavourings.</h6> -->
                     <!-- <img class="info-images" src="images/raw-cashews.png"> -->   
-                </div>
+                <!-- </div>
             </div>
         </div>
         <img class="nuts" src="images/nuts.png">   
-        <img src="images/nuts-banner.png" style="padding-top: 24px;">   
-    </div>
+        <img class="nuts-banner" src="images/nuts-banner.png" style="padding-top: 24px;">   
+    </div> -->
     <!--Virtual Farm Tour--> 
     <div class="virtual-tour">
         <div class="row-10">
             <div class="heading">
-                <p3>Virtual Tour</p3>
+                <h3>Virtual Tour</h3>
             </div>
             <div class="row">
                 <div class="col-md-10 offset-md-1">
@@ -81,12 +188,13 @@
                 </div>
             </div>
         </div>
+        <img class="nuts-banner" src="images/nuts-banner.png"> 
     </div>
     <!--farm form-->
     <div id="farm-tour">
         <div class="row-10">
             <div class="heading">
-                <p5>Cashew Farm Tour</p5>
+                <h3>Cashew Farm Tour</h3>
             </div>
             <div class="order-form">
                 <div class="row justify-content-around">
@@ -125,7 +233,7 @@
                             <label for="message">Special requests/ Other remarks:<span class="required">*</span></label>
                             <textarea rows="5" name="message" placeholder="Message"></textarea>
                             <div class="farm-button">
-                                <a href="#farm-tour" class="button">Sign Up Now</a>
+                                <a href="#farm-tour">Sign Up Now</a>
                             </div>
                         </div>
                     </div>
@@ -136,20 +244,20 @@
     <!--Getting there-->
     <div class="row-10">
         <div class="getting-there">
-            <div class="heading-getting-there">
-                <p3>Getting Here</p3>
+            <div class="heading">
+                <h3>Getting Here</h3>
             </div>
             <div class="row getting-there-row">
                 <div class="col-md-4 address-contact">
-                    <h2>Address</h2> <br>
-                    <p8><b>Kok Fah Technology Farm Pte Ltd, <br> Singapore 698974</b></p8> <br>
-                    <p8>Mon to Fri</p8> <br>
-                    <p8>09:00 am to 05:00 pm</p8> <br><br> 
-                    <h2>Contact Us</h2> <br>
-                    <p8><b>Telephone</b></p8> <br>
-                    <p8>+65 8186 0985</p8> <br>
-                    <p8><b>Email</b></p8> <br>
-                    <p8>enquiries@kacaang.sg</p8> <br>
+                    <h3>Address</h3> <br>
+                    <h6><b>Kok Fah Technology Farm Pte Ltd, <br> Singapore 698974</b></h6> <br>
+                    <h6>Mon to Fri</h6>
+                    <h6>09:00 am to 05:00 pm</h6> <br><br> 
+                    <h3>Contact Us</h3> <br>
+                    <h6><b>Telephone</b></h6>
+                    <h6>+65 8186 0985</h6> <br>
+                    <h6><b>Email</b></h6>
+                    <h6>enquiries@kacaang.sg</h6> <br>
                 </div>
                 <div class="google-map col-md-8">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15954.55110078552!2d103.7279903!3d1.3938405!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0e02be68d759%3A0x799b814bc1705977!2sKok%20Fah%20Technology%20Farm%20Pte%20Ltd!5e0!3m2!1sen!2ssg!4v1699497422699!5m2!1sen!2ssg" style="border:0; width: 95%; height: 95%; padding-top: 6%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -162,8 +270,8 @@
         <div class="row-subscription">
             <div class="row">
                 <div class="col-md-5" style="padding-top: 55px">
-                    <p5>Got the case of the munchies?</p5> <br><br>
-                    <p5>Kacaang's &nbsp;</p5>
+                    <h7>Got the case of the munchies?</h7> <br><br>
+                    <h7>Kacaang's &nbsp;</h7>
                     <p6 style="color: #C33527; font-family: 'Titan One', sans-serif; font-size: 38px;">CASHEW</p6>
                     <div class="subscribe-icons">
                         <a href="#"><i class="subscribe-icons fa-brands fa-x-twitter"></i></a>
@@ -187,8 +295,8 @@
         <div class="row-subscription">
             <div class="row">
                 <div class="col-md-5" style="padding-top: 55px">
-                    <p5>Got the case of the munchies?</p5> <br><br>
-                    <p5>Kacaang's &nbsp;</p5>
+                    <h7>Got the case of the munchies?</h7> <br><br>
+                    <h7>Kacaang's &nbsp;</h7>
                     <p6 style="color: #C33527; font-family: 'Titan One', sans-serif; font-size: 38px;">CASHEW</p6>
                     <div class="subscribe-icons">
                         <a href="#"><i class="subscribe-icons fa-brands fa-x-twitter"></i></a>
@@ -212,7 +320,7 @@
         <div class="row-footer">
             <div class="row">
                 <div class="col-md-2">
-                    <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+                    <a href="index.html"><img class="kacaang-logo" src="images/logo.png"></a>
                 </div>
                 <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
@@ -247,7 +355,7 @@
     <!--mobile footer-->
     <div class="mobile-footer">
         <div class="row-footer">
-            <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
+            <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
                 <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
@@ -266,12 +374,8 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
-                <p style="font-family: 'Comfortaa', sans-serif;
-                color: #EDA23F;
-                font-size: 14px;
-                font-weight: bold;">|</p>
-                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
                 <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
